# NextRobot

./: CMakeLists.txt  README.md  package.xml  pcd_edit.py
cmake/: common.cmake  set_rpath.cmake  super_build.cmake
include/common/: clock_time.h  task.h  type_cast.h
launch/: amcl_new.launch  calib.yaml  demo.launch  demo_USlam.launch  filter.launch  matching.launch  scan_filter.rviz  scan_matching.rviz
launch/amcl/: amcl.launch  demo_USlam.launch
src/: pid.cpp  pid.h  pointcloud_docking.cpp  readme.md  scan_circle.cpp  scan_docking.cpp  scan_filter_intensity.cpp  scan_matching.cpp  scan_republisher.cpp
src/control/: control_utils.cpp  control_utils.h  optim_path_follower.cpp  optim_path_follower.h  optim_path_planner.cpp  optim_path_planner.h
src/functional/: generator.h
src/icp/: Normal2dEstimation.cpp  Normal2dEstimation.h  PclNormEstimation2d.cpp  PclNormEstimation2d.h
src/math/: math_basic.h
src/message/: serialization_json.h
src/perception/: PointCloudPoseSolver.cpp  PointCloudPoseSolver.h  laserscan_filter.cpp  laserscan_filter.h  normal_estimation_2d.h  optim_circle_solver.cpp  optim_circle_solver.h  optim_shelf_solver.h  pcl_circle_fitting.cpp  pcl_circle_fitting.h  pcl_icp.h  pcl_pointcloud_normal_estmation_2d.h  pointcloud_detection.cpp  pointcloud_detection.h
src/pose_solver/: ceres_scan_to_marker.h
src/ros_tool/: RvizInteractiveControlTool.cpp  RvizInteractiveControlTool.h
src/sensor/: geometry_types.h  laser_scan.h  pointcloud_pcl.h  pointcloud_pcl_ros.h  pointcloud_ros.h
src/sensor/sdk/: ifm_camera.cpp  ifm_camera.h
src/transform/: pose_filter.h  transform.h
